# sound-theme-freedesktop

./: Makefile.am  Makefile.in  NEWS  aclocal.m4  configure  configure.ac  index.theme.in
debian/: changelog  control  control.in  rules  watch
po/: POTFILES.in
stereo/: Makefile.am  Makefile.in
